--- a/views/feedbackpage.ejs
+++ b/views/feedbackpage.ejs
@@ -224,7 +224,7 @@
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="empindex">首頁</a></li>
-                                <li class="breadcrumb-item active"><a href="memberadmin">會員回報訊息</a>
+                                <li class="breadcrumb-item active"><a href="feedbackpage">會員回報訊息</a>
                                 </li>
                             </ol>
                         </div>
@@ -249,8 +249,8 @@
                                                     <option>Oujda</option>
                                                     <option>Marakesh</option>
                                                     <option>Berrechid</option>
-                                                    <option>Lexington</option>-->
-                                                </select>
+                                                    <option>Lexington</option>
+                                                </select>-->
                                             </div>
                                         </div>
                           <!--                   <div class="col-lg-3 col-sm-12">
