--- a/views/brand.ejs
+++ b/views/brand.ejs
@@ -65,43 +65,72 @@
 							</article>
 
 						<!-- Posts -->
-						
-								<div>
-									<header>
-										<h2><a href="leapingbunny">Leaping Bunny Certification<br />
-										</a></h2>
-										<span class="date">參考資料:<a href="https://www.leapingbunny.org/shopping-guide">https://www.leapingbunny.org/shopping-guide</a></span>
-									</header>
-									<a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" alt="" ></a>
-									<p></p>
-									<ul class="actions special">
-										<li><a href="leapingbunny" class="button">查看名單</a></li>
-									</ul>
-								</div>
-								<div class="brandpic">
-									<header>
-										<h2><a href="peta">Beauty without Bunnies Program<br />
-										</a></h2>
-										<span class="date">參考資料:<a href="https://crueltyfree.peta.org/companies-dont-test/">https://crueltyfree.peta.org/companies-dont-test/</a></span>
-									</header>
-									<a href="peta" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p></p>
-									<ul class="actions special">
-										<li><a href="peta" class="button">查看名單</a></li>
-									</ul>
-								</div>
-								<div class="brandpic">
-									<header>
-										<h2><a href="nmcb">兔兔不哭<br />
-										</a></h2>
-										<span class="date">參考資料:<a href="https://www.922.org.tw/response/">https://www.922.org.tw/response/</a></span>
-									</header>
-									<a href="nmcb" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p></p>
-									<ul class="actions special">
-										<li><a href="nmcb" class="button">查看名單</a></li>
-									</ul>
-								</div>
+						<section class="posts">
+							<article>
+								<header>
+									<h2><a href="leapingbunny">Leaping Bunny Certification<br />
+									</a></h2>
+									<span class="date">參考資料:<a href="https://www.leapingbunny.org/shopping-guide">https://www.leapingbunny.org/shopping-guide</a></span>
+								</header>
+								<a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<p></p>
+								<ul class="actions special">
+									<li><a href="leapingbunny" class="button">查看名單</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<h2><a href="peta">Beauty without Bunnies Program<br />
+									</a></h2>
+									<span class="date">參考資料:<a href="https://crueltyfree.peta.org/companies-dont-test/">https://crueltyfree.peta.org/companies-dont-test/</a></span>
+								</header>
+								<a href="peta" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<p></p>
+								<ul class="actions special">
+									<li><a href="peta" class="button">查看名單</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<h2><a href="nmcb">兔兔不哭<br />
+									</a></h2>
+									<span class="date">參考資料:<a href="https://www.922.org.tw/response/">https://www.922.org.tw/response/</a></span>
+								</header>
+								<a href="nmcb" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<p></p>
+								<ul class="actions special">
+									<li><a href="nmcb" class="button">查看名單</a></li>
+								</ul>
+							</article>
+							<article>
+								
+							</article>
+							<!-- <article>
+								<header>
+									<span class="date">April 11, 2017</span>
+									<h2><a href="#">Odio magna<br />
+									sed consectetur</a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<ul class="actions special">
+									<li><a href="#" class="button">Full Story</a></li>
+								</ul>
+							</article>
+							<article> 
+								<header>
+									<span class="date">April 7, 2017</span>
+									<h2><a href="#">Augue lorem<br />
+									primis vestibulum</a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<ul class="actions special">
+									<li><a href="#" class="button">Full Story</a></li>
+								</ul>
+							</article>-->
+						</section>
+
 								
 								<!-- </article>
 								<article>
