會員編輯頁面更新

--- a/public/css/membereditor.css
+++ b/public/css/membereditor.css
@@ -1,4 +1,4 @@
-body {
+body {background: #F7BEC4;
     font-family: Microsoft JhengHei;
 }
 
@@ -16,8 +16,8 @@ body {
     width: 23%;
     height: 100%;
     position: fixed;
-    background-color: #5f6d7e;
-    color: white;
+    background-color: #F7BEC4;
+    color: F7BEC4;
     overflow-y: hidden;
   }
   
@@ -28,7 +28,7 @@ body {
   .profile-image {
     width: 150px;
     height: 150px;
-    border: 4px solid black;
+    border: 4px solid F7BEC4;
     -webkit-border-radius: 75px;
     border-radius: 75px;
     display: flex;
