--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <header class="container"> 
+      
  <!--   <div class="container-fluid">
         <div class="row">
             <div class="sidebar-menu hidden-xs hidden-sm">
@@ -155,3 +157,4 @@
 </body>
 
 </html>
+
