--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -77,15 +77,15 @@
                     <li><a href="logout"><i class="fa fa-sign-out"></i>登出</a></li>
                 </ul>
             </div> 
-            <!-- .main-navigation -->
-          <!--  <div class="social-icons">
+            
+           <div class="social-icons">
                 <ul>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                    <li><a href="#"><i class="fa fa-rss"></i></a></li> -->
+                    <li><a href="#"><i class=""></i></a></li>
+                    <li><a href="#"><i class=""></i></a></li>
+                    <li><a href="#"><i class=""></i></a></li>
+                    <li><a href="#"><i class=""></i></a></li>
+                    <li><a href="#"><i class=""></i></a></li>
+                    <li><a href="#"><i class=""></i></a></li>
                 </ul>
             </div> <!-- .social-icons -->
         </div> <!-- .sidebar-menu -->
