會員編輯頁更新+主頁圖片更新

--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -116,8 +116,10 @@
                             <div class="col-md-12">
                                 <h4 class="widget-title">會員資料</h4>
                                 <div class="about-image">
-                                    <img src="img/" alt="">
-                                </div>
+                              
+                                
+                                <!--  <img src="img/8.jpg" alt="about me"> -->
+                         </div>
                                 <div class="col-xl-4">
                                     <div class="form-group">
                                         <h3>暱稱： <%= item.m_nickname %></h3>
@@ -149,7 +151,7 @@
                         </div>
                             <div class="about-image">
                               
-                                   </form>
+                                   
                                    <!--  <img src="img/8.jpg" alt="about me"> -->
                             </div>
                             <p> <a rel="nofollow" href="#" target="_parent"></a>  <strong></strong>  <a rel="nofollow" href="#" target="_parent"></a> 
