--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -13,6 +13,38 @@
 </head>
 
 <body>
+    <br><br><br>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+          <div class="container">
+            <a class="navbar-brand" href="/">Bunny幫你</a>
+            <button 
+            class="navbar-toggler" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#navbarNav"
+              aria-controls="navbarNav" 
+              aria-expanded="false" 
+              aria-label="Toggle navigation"
+              >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/">首頁</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about">關於我們</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="product">實驗動物認養</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    
     <header class="container"> 
       
  <!--   <div class="container-fluid">
