更新會員編輯(頭像) + 導覽列小改

--- a/views/detailaddFail.ejs
+++ b/views/detailaddFail.ejs
@@ -36,7 +36,7 @@
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
                <!----<h1>邦妮幫你Bunny</h1>---->
-			    <h2>Bunny幫你資料更新失敗</h2>
+			    <h2>Bunny幫你領養登記失敗</h2>
                   <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
             </div>
         </div>
@@ -67,7 +67,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">首頁</a>
+                  <a class="nav-link" aria-current="page" href="/">首頁</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about">關於我們</a>
