--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -40,7 +40,7 @@ shrink-to-fit=no"
                 <a class="nav-link" href="about">關於我們</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="product">實驗動物認養</a>
+                <a class="nav-link active" href="product">實驗動物認養</a>
               </li>
             </ul>
           </div>
