--- a/views/detailaddSuccess.ejs
+++ b/views/detailaddSuccess.ejs
@@ -68,7 +68,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">首頁</a>
+                  <a class="nav-link" aria-current="page" href="/">首頁</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about">關於我們</a>
