--- a/views/news.ejs
+++ b/views/news.ejs
@@ -1,111 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/about.css" />
-    <link rel="manifest" href="manifest.json">
-    <title>訊息公告</title>
-  </head>
 
-  <body>
-    <header>
-      <h3 class="title mt-3">活動資訊<small></small></h3>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="/">Bunny幫你</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">首頁</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about">關於我們</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="product">實驗動物認養</a>
-              </li>
-            </ul>
-          </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/about.css" />
+  <link rel="manifest" href="manifest.json">
+  <title>訊息公告</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="/">Bunny幫你</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/">首頁</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about">關於我們</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="product">實驗動物認養</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <div id="banner"></div>
-    <div class="container mb-3">
-        <div class="row g-0">
-            <div class="col-lg align-self-center text-center">
-                <h3 class="title mt-3">活動資訊<small></small></h3>
-                <p> 好好愛牠2022線上動保教育講座報名中額滿為止</p>
-                <p> <br /> <br /> <br /></p>
-            </div>
-            <div class="col-lg">
-                <img src="images/newstest.png" class="img-fluid">
-            </div>
-        </div>
-        <div class="row g-0">
-            <div class="col-lg align-self-center text-center">
-                <h3 class="title mt-3">活動資訊<small></small></h3>
-                <p>用行動支持，幫助牠好好生活，為感謝大家支持，捐款滿額送友善動物馬克杯活動開跑！<br /><br />
-                </p>
-            </div>
-            <div class="col-lg order-lg-first">
-                <img src="images/event2.jpg" class="img-fluid">
-            </div>
-        </div>
-
-
-    </footer>
-
-    <div class="container mb-3">
-      <div class="row g-0">
-          <div class="col-lg align-self-center text-center">
-              <h3 class="title mt-3">訊息公告<small></small></h3>
-              <p>動物實驗，一個大家並不陌生的詞彙，但你知道每年有多少隻動物被當實驗品嗎？</p>
-              <p> <br /> <br /> <br /></p>
-          </div>
-          <div class="col-lg">
-              <img src="images/event3.png" class="img-fluid">
-          </div>
       </div>
-      <div class="row g-0">
-          <div class="col-lg align-self-center text-center">
-              <h3 class="title mt-3">訊息公告<small></small></h3>
-              <p>法國將禁售貓狗、禁止鯨豚表演，台灣呢？ 法國自2026年起全面禁止海豚和虎鯨表演
-              </p>
-          </div>
-          <div class="col-lg order-lg-first">
-              <img src="images/event4.jpg" class="img-fluid">
-          </div>
-      </div>
-
-
-<div class="container mb-3">
-  <div class="row g-0">
+    </nav>
+  </header>
+  <div id="banner"></div>
+  <div class="container mb-3">
+    <div class="row g-0">
       <div class="col-lg align-self-center text-center">
-          <h3 class="title mt-3">訊息公告<small></small></h3>
-          <p>--可愛不該是牠的原罪-- 美國加州自2019年起加州禁止寵物店販售來自繁殖場的動物，包括狗、貓及兔子等。加州境內的寵物店只能販賣來自公共動物控管中心、動物收容所、動物防虐庇護所、救援組織等非營利機構的動物，這才是真正的落實動物福利！</p>
-          <p> <br /> <br /> <br /></p>
+        <h3 class="title mt-3">活動資訊<small></small></h3>
+        <p> 好好愛牠2022線上動保教育講座報名中額滿為止</p>
+        <p> <br /> <br /> <br /></p>
       </div>
       <div class="col-lg">
-          <img src="images/event5.png" class="img-fluid">
+        <img src="images/newstest.png" class="img-fluid">
       </div>
+    </div>
+    <div class="row g-0">
+      <div class="col-lg align-self-center text-center">
+        <h3 class="title mt-3">活動資訊<small></small></h3>
+        <p>用行動支持，幫助牠好好生活，為感謝大家支持，捐款滿額送友善動物馬克杯活動開跑！<br /><br />
+        </p>
+      </div>
+      <div class="col-lg order-lg-first">
+        <img src="images/event2.jpg" class="img-fluid">
+      </div>
+    </div>
   </div>
 
-</div>
 
-  <footer class="text-center bg-dark text-white py-2">
-      © 2021 All Rights Reserved.
-  </footer>
+  <div class="container mb-3">
+    <div class="row g-0">
+      <div class="col-lg align-self-center text-center">
+        <h3 class="title mt-3">訊息公告<small></small></h3>
+        <p>動物實驗，一個大家並不陌生的詞彙，但你知道每年有多少隻動物被當實驗品嗎？</p>
+        <p> <br /> <br /> <br /></p>
+      </div>
+      <div class="col-lg">
+        <img src="images/event3.png" class="img-fluid">
+      </div>
+    </div>
+    <div class="row g-0">
+      <div class="col-lg align-self-center text-center">
+        <h3 class="title mt-3">訊息公告<small></small></h3>
+        <p>法國將禁售貓狗、禁止鯨豚表演，台灣呢？ 法國自2026年起全面禁止海豚和虎鯨表演
+        </p>
+      </div>
+      <div class="col-lg order-lg-first">
+        <img src="images/event4.jpg" class="img-fluid">
+      </div>
+    </div>
+
+
+    <div class="container mb-3">
+      <div class="row g-0">
+        <div class="col-lg align-self-center text-center">
+          <h3 class="title mt-3">訊息公告<small></small></h3>
+          <p>--可愛不該是牠的原罪--
+            美國加州自2019年起加州禁止寵物店販售來自繁殖場的動物，包括狗、貓及兔子等。加州境內的寵物店只能販賣來自公共動物控管中心、動物收容所、動物防虐庇護所、救援組織等非營利機構的動物，這才是真正的落實動物福利！
+          </p>
+          <p> <br /> <br /> <br /></p>
+        </div>
+        <div class="col-lg">
+          <img src="images/event5.png" class="img-fluid">
+        </div>
+      </div>
+
+    </div>
+
+    <footer class="text-center bg-dark text-white py-2">
+      Copyrights © 2022 All Rights Reserved by Bunny幫你
+    </footer>
 
     <!-- Optional JavaScript -->
     <script src="js/bootstrap.js"></script>
-  </body>
+</body>
+
 </html>
